--- a/dex.html
+++ b/dex.html
@@ -59,6 +59,13 @@
 	<span id="button-up">
 		<i class="fa-solid fa-circle-chevron-up"></i>
 	</span>
+
+	<div id="popup-bg">
+		<div id="popup-container">
+			<div id="popup-card-container"></div>
+			<div id="popup-navigation-container"></div>
+		</div>
+	</div>
 </body>
 </html>
 
